hello-world-k8s-deployment/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello
spec:
  replicas: 5
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-pod
        image: gcr.io/google-containers/echoserver:1.10
        ports:
        - containerPort: 8080
