hello-world-k8s-deployment/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP  
      port: 8080
      targetPort: 8080
